--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorAppBackground">#423752</color>
+    <color name="colorTabChangePassword">#4E405A</color>
+    <color name="colorTabBackground">#CF203F</color>
+    <color name="colorTabBackgroundLighter">#423752</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorChildBackground">#0A291E</color>
+    <color name="btn_login">#26ae90</color>
+    <color name="btn_login_bg">#eceef1</color>
+    <color name="colorGray">#888888</color>
+    <color name="colorGreen">#7CFC00</color>
+    <color name="link_blue">#4d94ff</color>
 </resources>
