Implement detail meeting

--- a/app/src/main/res/layout/fragment_meeting_detail.xml
+++ b/app/src/main/res/layout/fragment_meeting_detail.xml
@@ -6,24 +6,9 @@
     android:orientation="vertical"
     tools:context=".Fragment.MeetingDetailFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnWeek1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/week1" />
-
-        <Button
-            android:id="@+id/btnWeek2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/week2" />
-    </LinearLayout>
+    <ListView
+        android:id="@+id/lvDay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
