--- a/app/src/main/res/layout/layout_detail.xml
+++ b/app/src/main/res/layout/layout_detail.xml
@@ -15,6 +15,7 @@
         android:layout_weight="1">
 
         <ImageView
+            android:id="@+id/backArrow"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
