--- a/app/src/main/res/layout/fragment_manifest.xml
+++ b/app/src/main/res/layout/fragment_manifest.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="4"
+    android:layout_weight="5"
     android:background="@color/colorWhite"
     android:orientation="vertical"
    >
@@ -29,10 +29,10 @@
         android:id="@+id/rel2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="2">
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/imgLogo"
             android:src="@drawable/ic_logo"
             android:layout_centerInParent="true"
