--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <include layout="@layout/cardview_sprint"/>
+    <include layout="@layout/cardview_role"/>
 
     <include layout="@layout/cardview_srum_artifacts" />
 
