--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/cardview_sprint"/>
-    <include layout="@layout/cardview_role"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <include layout="@layout/cardview_srum_artifacts" />
+        <include layout="@layout/cardview_sprint" />
 
-</LinearLayout>
+        <include layout="@layout/cardview_role" />
+
+        <include layout="@layout/cardview_srum_artifacts" />
+
+    </LinearLayout>
+</ScrollView>
