--- a/app/src/main/res/drawable/custom_border_table.xml
+++ b/app/src/main/res/drawable/custom_border_table.xml
@@ -8,5 +8,5 @@
     <stroke
         android:width="1dp"
         android:color="@android:color/white" />
-    <solid android:color="@android:color/black"/>
+    <solid android:color="@color/colorAppBackground"/>
 </shape>
