Content for role

--- a/app/src/main/res/layout/fragment_role.xml
+++ b/app/src/main/res/layout/fragment_role.xml
@@ -25,6 +25,11 @@
         android:layout_height="wrap_content"
         android:text="@string/product_owner"/>
 
+    <TextView
+        android:id="@+id/txtRole"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 
 </LinearLayout>
