--- a/app/src/main/res/layout/layout_detail.xml
+++ b/app/src/main/res/layout/layout_detail.xml
@@ -13,7 +13,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:shrinkColumns="0"
 
             >
             <TableRow
@@ -176,6 +176,7 @@
                     android:id="@+id/Row7Column2"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
+                    android:maxLines="1"
                     android:layout_weight="7"
                     android:scrollbars="vertical"
                     />
