--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,11 @@
         android:layout_weight="2">
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/imgLogo"
             android:src="@drawable/ic_logo"
             android:layout_centerInParent="true"
-            android:scaleType="center"
+            android:scaleType="fitCenter"
             android:layout_gravity="center"
             android:visibility="invisible"/>
 
