--- a/app/src/main/res/layout/fragment_role.xml
+++ b/app/src/main/res/layout/fragment_role.xml
@@ -47,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/product_owner_content"
+        android:textColor="@color/colorBlack"
         android:visibility="gone"/>
 
 </LinearLayout>
