--- a/app/src/main/res/layout/product_backlog_item_layout.xml
+++ b/app/src/main/res/layout/product_backlog_item_layout.xml
@@ -4,6 +4,9 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="25dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginTop="10dp"
     >
     <TextView
         android:id="@+id/product_backlog_item_id"
@@ -22,6 +25,7 @@
         android:id="@+id/product_backlog_item_priority"
         android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:text="1"/>
+        android:text="1"
+        android:textAlignment="center"/>
 
 </LinearLayout>
