--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,172 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="5"
-    android:background="@color/colorWhite"
-    android:orientation="vertical"
-    >
-    <RelativeLayout
-        android:id="@+id/rel1"
+    android:layout_height="match_parent">
+
+
+    <LinearLayout
+
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/welcomeTxt"
-            android:text="Welcome to Scrum Agile"
-            android:textSize="@dimen/textSizeWelcome"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:visibility="invisible"/>
+        android:layout_height="match_parent"
+        android:layout_weight="5"
+        android:background="@color/colorWhite"
+        android:orientation="vertical">
 
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rel1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-    <RelativeLayout
-        android:id="@+id/rel2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imgLogo"
-            android:src="@drawable/ic_logo"
-            android:layout_centerInParent="true"
-            android:scaleType="fitCenter"
-            android:layout_gravity="center"
-            android:visibility="invisible"/>
+            <TextView
+                android:id="@+id/welcomeTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:text="Welcome to Scrum Agile"
+                android:textSize="@dimen/textSizeWelcome"
+                android:textStyle="bold"
+                android:visibility="invisible" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rel2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/imgLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_logo"
+                android:visibility="invisible" />
 
 
-    </RelativeLayout>
+        </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/rel3"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        >
+        <RelativeLayout
+            android:id="@+id/rel3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
 
-        <TextView
-            android:layout_marginTop="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/introduceTxt"
-            android:textSize="@dimen/textSizeIntroduce"
-            android:visibility="invisible"
+            <TextView
+                android:id="@+id/introduceTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:textSize="@dimen/textSizeIntroduce"
+                android:visibility="invisible"
 
+                />
+
+            <TextView
+                android:id="@+id/introduceTxt1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/introduceTxt"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:textSize="@dimen/textSizeIntroduce"
+                android:visibility="invisible"
+
+                />
+
+
+            <!-- <TextView
+                 android:layout_marginTop="10dp"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="5dp"
+                 android:id="@+id/introduceTxt1"
+                 android:layout_below="@+id/introduceTxt"
+                 android:textSize="@dimen/textSizeIntroduce"
+                 android:textStyle="bold"
+                 android:text="@string/introduce2_first"
+                 />-->
+
+            <!-- <TextView
+                 android:layout_marginTop="50dp"
+                 android:layout_marginStart="5dp"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:id="@+id/introduceTxtLine1"
+                 android:textSize="@dimen/textSizeIntroduce"
+                 android:layout_toEndOf="@+id/introduceTxt"
+                 android:text="@string/introduce1_end"
+                  />-->
+
+
+            <!--<TextView
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:id="@+id/introduceTxt1Line1"
+                android:layout_below="@+id/introduceTxt"
+                android:textSize="@dimen/textSizeIntroduce"
+                android:layout_toEndOf="@+id/introduceTxt1"
+                android:text="@string/introduce2_end"
+                />-->
+
+            <TextView
+                android:id="@+id/introduceTxt2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/introduceTxt1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:textSize="@dimen/textSizeIntroduce"
+                android:visibility="invisible"
+
+                />
+
+            <!--   <TextView
+                   android:layout_marginTop="10dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginStart="5dp"
+                   android:id="@+id/introduceTxt2Line1"
+                   android:layout_below="@+id/introduceTxt1"
+                   android:textSize="@dimen/textSizeIntroduce"
+                   android:layout_toEndOf="@+id/introduceTxt2"
+                   android:text="@string/introduce3_end"
+                   />-->
+            <TextView
+                android:id="@+id/introduceTxt3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/introduceTxt2"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:textSize="@dimen/textSizeIntroduce"
+                android:visibility="invisible"
+
+                />
+
+            <Button
+                android:id="@+id/nextBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/introduceTxt3"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:visibility="invisible" />
+
+            <!-- <TextView
+                 android:layout_marginTop="10dp"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="5dp"
+                 android:id="@+id/introduceTxt3Line1"
+                 android:layout_below="@+id/introduceTxt2"
+                 android:textSize="@dimen/textSizeIntroduce"
+                 android:text="@string/introduce4_end"
+                 android:layout_toEndOf="@+id/introduceTxt3"-->
             />
+        </RelativeLayout>
 
-        <TextView
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:id="@+id/introduceTxt1"
-            android:layout_below="@+id/introduceTxt"
-            android:textSize="@dimen/textSizeIntroduce"
-            android:visibility="invisible"
-
-            />
-
-
-        <!-- <TextView
-             android:layout_marginTop="10dp"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginStart="5dp"
-             android:id="@+id/introduceTxt1"
-             android:layout_below="@+id/introduceTxt"
-             android:textSize="@dimen/textSizeIntroduce"
-             android:textStyle="bold"
-             android:text="@string/introduce2_first"
-             />-->
-
-        <!-- <TextView
-             android:layout_marginTop="50dp"
-             android:layout_marginStart="5dp"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:id="@+id/introduceTxtLine1"
-             android:textSize="@dimen/textSizeIntroduce"
-             android:layout_toEndOf="@+id/introduceTxt"
-             android:text="@string/introduce1_end"
-              />-->
-
-
-        <!--<TextView
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:id="@+id/introduceTxt1Line1"
-            android:layout_below="@+id/introduceTxt"
-            android:textSize="@dimen/textSizeIntroduce"
-            android:layout_toEndOf="@+id/introduceTxt1"
-            android:text="@string/introduce2_end"
-            />-->
-
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/introduceTxt2"
-            android:layout_below="@+id/introduceTxt1"
-            android:textSize="@dimen/textSizeIntroduce"
-            android:visibility="invisible"
-
-            />
-
-        <!--   <TextView
-               android:layout_marginTop="10dp"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginStart="5dp"
-               android:id="@+id/introduceTxt2Line1"
-               android:layout_below="@+id/introduceTxt1"
-               android:textSize="@dimen/textSizeIntroduce"
-               android:layout_toEndOf="@+id/introduceTxt2"
-               android:text="@string/introduce3_end"
-               />-->
-        <TextView
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/introduceTxt3"
-            android:layout_below="@+id/introduceTxt2"
-            android:textSize="@dimen/textSizeIntroduce"
-            android:visibility="invisible"
-
-            />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/nextBtn"
-            android:layout_below="@+id/introduceTxt3"
-            android:layout_marginTop="10dp"
-            android:visibility="invisible"/>
-
-        <!-- <TextView
-             android:layout_marginTop="10dp"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginStart="5dp"
-             android:id="@+id/introduceTxt3Line1"
-             android:layout_below="@+id/introduceTxt2"
-             android:textSize="@dimen/textSizeIntroduce"
-             android:text="@string/introduce4_end"
-             android:layout_toEndOf="@+id/introduceTxt3"-->
-        />
-    </RelativeLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
