--- a/app/src/main/res/layout/fragment_manifest.xml
+++ b/app/src/main/res/layout/fragment_manifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+<LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="5"
@@ -155,3 +159,4 @@
     </RelativeLayout>
 
 </LinearLayout>
+</ScrollView>
